--- a/css/main.css
+++ b/css/main.css
@@ -1918,7 +1918,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #73e07d;
+  background: #ff4726;
 }
 .links-of-blogroll {
   font-size: 13px;
