--- a/css/main.css
+++ b/css/main.css
@@ -1918,7 +1918,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #aaf58f;
+  background: #17506f;
 }
 .links-of-blogroll {
   font-size: 13px;
